@@ -19,7 +19,7 @@ SAVE_AUTOMAKE="$AUTOMAKE"
 SAVE_AUTOCONF="$AUTOCONF"
 
 AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(libast, 0.6)
+AM_INIT_AUTOMAKE(libast, 0.6.1)
 AC_DEFINE_UNQUOTED(LIBAST_VERSION, "$VERSION", [Version])
 AM_CONFIG_HEADER(config.h include/libast/sysdefs.h)
 
